--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
   <body>
     <!-- Main body -->
-    <button id="sign-in-button">Sign in</button>
+    <button id="sign-in-button">Sign in with GitHub</button>
 
-    <h1>Welcome to My Awesome App</h1>
+    <h1>Firebase testing app</h1>
     <div id="sign-in-status"></div>
     <pre id="account-details"></pre>
 
