--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <pre id="account-details"></pre>
     <pre id="login-count"></pre>
 
+    <h3>Online Users:</h3>
+    <pre id="online-users"></pre>
+
     <!-- Scripts -->
     <script type="module" src="./app.js"></script>
   </body>
